syntax = "proto3";
package vcs;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "sourcegraph.com/sqs/pbtypes/timestamp.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;

message Commit {
	string ID = 1 [(gogoproto.customtype) = "CommitID"];
	Signature Author = 2 [(gogoproto.nullable) = false];
	Signature Committer = 3;
	string Message = 4;

	// Parents are the commit IDs of this commit's parent commits.
	repeated string Parents = 5 [(gogoproto.customtype) = "CommitID"];
}

message Signature {
	string Name = 1;
	string Email = 2;
	pbtypes.Timestamp Date = 3 [(gogoproto.nullable) = false];
}

// A Branch is a VCS branch.
message Branch {
	// Name is the name of this branch.
	string Name = 1;

	// Head is the commit ID of this branch's head commit.
	string Head = 2 [(gogoproto.customtype) = "CommitID"];

	// Commit optionally contains commit information for this branch's head commit.
	// It is populated if IncludeCommit option is set.
	Commit Commit = 4;

	// Counts optionally contains the commit counts relative to specified branch.
	BehindAhead Counts = 3;
}

// BehindAhead is a set of behind/ahead counts.
message BehindAhead {
	uint32 Behind = 1;
	uint32 Ahead = 2;
}

// BranchesOptions specifies options for the list of branches returned by
// (Repository).Branches.
message BranchesOptions {
	// MergedInto will cause the returned list to be restricted to only
	// branches that were merged into this branch name.
	string MergedInto = 4 [(gogoproto.moretags) = "url:\",omitempty\""];

	// IncludeCommit controls whether complete commit information is included.
	bool IncludeCommit = 2 [(gogoproto.moretags) = "url:\",omitempty\""];

	// BehindAheadBranch specifies a branch name. If set to something other than blank
	// string, then each returned branch will include a behind/ahead commit counts
	// information against the specified base branch. If left blank, then branches will
	// not include that information and their Counts will be nil.
	string BehindAheadBranch = 1 [(gogoproto.moretags) = "url:\",omitempty\""];

	// ContainsCommit filters the list of branches to only those that
	// contain a specific commit ID (if set).
	string ContainsCommit = 3 [(gogoproto.moretags) = "url:\",omitempty\""];
}

// A Tag is a VCS tag.
message Tag {
	string Name = 1;
	string CommitID = 2 [(gogoproto.customtype) = "CommitID"];

	// TODO(sqs): A git tag can point to other tags, or really any
	// other object. How should we handle this case? For now, we're
	// just assuming they're all commit IDs.
}

// SearchOptions specifies options for a repository search.
message SearchOptions {
	// the query string
	string Query = 1;

	// currently only FixedQuery ("fixed") is supported
	string QueryType = 2;

	// the number of lines before and after each hit to display
	int32 ContextLines = 3;

	// max number of matches to return
	int32 N = 4;

	// starting offset for matches (use with N for pagination)
	int32 Offset = 5;
}

// A SearchResult is a match returned by a search.
message SearchResult {
	// File is the file that contains this match.
	string File = 1;

	// The byte range [start,end) of the match.
	uint32 StartByte = 2;
	uint32 EndByte = 3;

	// The line range [start,end] of the match.
	uint32 StartLine = 4;
	uint32 EndLine = 5;

	// Match is the matching portion of the file from [StartByte,
	// EndByte).
	bytes Match = 6;
}

// A Committer is a contributor to a repository.
message Committer {
	string Name = 1;
	string Email = 2;
	int32 Commits = 3;
}
